--- a/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
+++ b/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
@@ -212,6 +212,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="543"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="V6F-8A-MNg"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yfc-Zx-n92" userLabel="First Responder" sceneMemberID="firstResponder"/>
