--- a/JUN-tong/JUN-tong/ShuttleBusInfo.xib
+++ b/JUN-tong/JUN-tong/ShuttleBusInfo.xib
@@ -13,36 +13,53 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShuttleBusInfo" id="cDN-pg-Ghy" customClass="ShuttleBusCollectionViewCell" customModule="JUN_tong" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="288" height="247"/>
+            <rect key="frame" x="0.0" y="0.0" width="255" height="247"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                <rect key="frame" x="0.0" y="0.0" width="288" height="247"/>
+                <rect key="frame" x="0.0" y="0.0" width="255" height="247"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="691-0b-wsf">
-                        <rect key="frame" x="0.0" y="0.0" width="288" height="247"/>
+                        <rect key="frame" x="0.0" y="0.0" width="255" height="247"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="example" translatesAutoresizingMaskIntoConstraints="NO" id="hFD-An-l9U">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="247"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="example" translatesAutoresizingMaskIntoConstraints="NO" id="hFD-An-l9U">
+                                <rect key="frame" x="0.0" y="0.0" width="255" height="247"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKv-EH-tVH">
-                                <rect key="frame" x="159" y="87" width="120" height="120"/>
+                                <rect key="frame" x="126" y="87" width="120" height="120"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10분전" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqQ-PP-ncG">
-                                        <rect key="frame" x="8" y="35" width="70" height="25"/>
+                                        <rect key="frame" x="4" y="35" width="80" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="HAl-qZ-BaI"/>
-                                            <constraint firstAttribute="width" constant="70" id="cmG-Y5-url"/>
+                                            <constraint firstAttribute="width" constant="80" id="cmG-Y5-url"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="24"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15분전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACk-CV-dmb">
+                                        <rect key="frame" x="72" y="72" width="43" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="secter" translatesAutoresizingMaskIntoConstraints="NO" id="Wa3-fe-Uy9">
+                                        <rect key="frame" x="47" y="36" width="48" height="62"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="48" id="7bJ-dr-mMw"/>
+                                            <constraint firstAttribute="height" constant="62" id="pxu-PR-YAt"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="eqQ-PP-ncG" firstAttribute="top" secondItem="kKv-EH-tVH" secondAttribute="top" constant="35" id="05r-9e-ufD"/>
-                                    <constraint firstItem="eqQ-PP-ncG" firstAttribute="leading" secondItem="kKv-EH-tVH" secondAttribute="leading" constant="8" id="Nbn-6s-bYI"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wa3-fe-Uy9" secondAttribute="trailing" constant="25" id="9gg-MV-vRX"/>
+                                    <constraint firstAttribute="bottom" secondItem="Wa3-fe-Uy9" secondAttribute="bottom" constant="22" id="HfP-DQ-oqN"/>
+                                    <constraint firstItem="eqQ-PP-ncG" firstAttribute="leading" secondItem="kKv-EH-tVH" secondAttribute="leading" constant="4" id="Nbn-6s-bYI"/>
+                                    <constraint firstAttribute="trailing" secondItem="ACk-CV-dmb" secondAttribute="trailing" constant="5" id="P5h-Tq-BhX"/>
+                                    <constraint firstAttribute="bottom" secondItem="ACk-CV-dmb" secondAttribute="bottom" constant="30" id="Zvk-cd-yXT"/>
                                     <constraint firstAttribute="height" constant="120" id="tfQ-qX-ZgW"/>
                                     <constraint firstAttribute="width" constant="120" id="wOU-zr-l9C"/>
                                 </constraints>
@@ -71,16 +88,19 @@
                 <constraint firstAttribute="bottom" secondItem="691-0b-wsf" secondAttribute="bottom" id="xFv-8f-iP9"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="cLa-BZ-Gfc"/>
-            <size key="customSize" width="288" height="247"/>
+            <size key="customSize" width="255" height="247"/>
             <connections>
                 <outlet property="backView" destination="691-0b-wsf" id="Pcy-hX-iOa"/>
                 <outlet property="firstTimeLabel" destination="eqQ-PP-ncG" id="zol-Fa-pOh"/>
+                <outlet property="secondTimeLabel" destination="ACk-CV-dmb" id="a7L-u5-1PW"/>
+                <outlet property="stationImage" destination="hFD-An-l9U" id="xVw-Z4-5Xq"/>
                 <outlet property="timeView" destination="kKv-EH-tVH" id="d9w-v1-a1g"/>
             </connections>
-            <point key="canvasLocation" x="393" y="214.5"/>
+            <point key="canvasLocation" x="376.5" y="214.5"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="example" width="960" height="960"/>
+        <image name="secter" width="48" height="61"/>
     </resources>
 </document>
